<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.bookshare.app.ui.splash.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.bookshare.app.ui.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.bookshare.app.ui.auth.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.bookshare.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.bookshare.app.ui.books.BookDetailFragment"
        android:label="@string/book_detail_title"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="bookId"
            app:argType="string" />
        <action
            android:id="@+id/action_bookDetailFragment_to_contactFragment"
            app:destination="@id/contactFragment" />
    </fragment>

    <fragment
        android:id="@+id/addBookFragment"
        android:name="com.bookshare.app.ui.books.AddBookFragment"
        android:label="@string/add_book_title"
        tools:layout="@layout/fragment_add_book" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.bookshare.app.ui.books.ContactFragment"
        android:label="@string/request_exchange_title"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.bookshare.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment" />
        <action
            android:id="@+id/action_profileFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
